1555: Remove support for review by award emojis in GitLab
Reviewed-by: ihse